recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:5: error: Double does not take parameters
    tree(steps-1,length(),angle, shrink)
                       ^